z-index fixed

--- a/src/static/scss/navs/_sidebar.scss
+++ b/src/static/scss/navs/_sidebar.scss
@@ -2,6 +2,7 @@
 .sidebar {
   width: $sidebar-collapsed-width;
   min-height: 100vh;
+  z-index: 100;
   .nav-item {
     position: relative;
     &:last-child {
